--- a/project-ygmall/src/index_mall.html
+++ b/project-ygmall/src/index_mall.html
@@ -2075,7 +2075,7 @@
 			<!-- 开始商品推荐内容 -->
 			<div class="bz-more-inner">
 				<ul class="bz-more-list clearfix">
-
+<!-- 
 					<li class="bz-more-goods">
 						<a class="bz-more-goods-lk" href="/goods/72108" target="_blank"
 							title="厨厨喵咪弥香麻辣西小龙虾熟食即食净虾650g*2 送海派拌面（葱油）单人份158g">
@@ -2230,8 +2230,8 @@
 									</span> </p>
 							</div>
 						</a>
-					</li>
-					<li class="bz-more-goods">
+					</li> -->
+					<!-- <li class="bz-more-goods">
 						<a class="bz-more-goods-lk" href="/goods/75739" target="_blank"
 							title="【香港直邮】L'OREAL/欧莱雅小黑 瓶青春密码酵素精华肌底液 30ML">
 							<img class="bz-more-photo J-lazy"
@@ -2382,7 +2382,7 @@
 									</span> </p>
 							</div>
 						</a>
-					</li>
+					</li> -->
 
 
 				</ul>
@@ -2519,7 +2519,8 @@
 			</ul>
 		</div>
 	</div>
-
+	<script src="script/js/jquery.js"></script>
+	<script src="script/js/index.js"></script>
 
 </body>
 
