--- a/project-ygmall/src/cart.html
+++ b/project-ygmall/src/cart.html
@@ -102,23 +102,184 @@
             </ul>
         </header>
     </div>
-    <div class="ncc-null-shopping"><i class="ico"></i>
-        <h4>您的购物车还没有商品</h4>
-        <p><a class="btn btn-sm btn-success m-r-10" href="/"><i class="fa fa-reply-all"></i>马上去购物</a> <a
-                class="btn btn-sm btn-default" href="/member/orders/list"><i class="fa fa-file-text"></i>查看自己的订单</a></p>
+    <!-- 购物车列表 -->
+    <div id="container" class="cart">
+        <div class="w">
+            <!--购物车为空时显示的盒子-->
+            <div class="empty-cart">
+                    <div class="empty-cart-msg">
+                        购物车空空的哦~，去看看心仪的商品吧~
+                        <a href="">去购物></a>
+                    </div>
+                </div>
+            <!--全部商品-->
+            <div class="cart-top" style="display: block;">
+                <div class="cart-top-left">
+                    <a href=""><em>全部商品</em></a>
+                </div>
+                <div class="cart-top-right">
+                    <span>配送至：</span>
+                    <div class="jdarea">
+                        <div class="areawrap">
+                            <div class="areatext">北京朝阳区三环到四环之间</div>
+                            <b></b>
+                        </div>
+                    </div>
+                </div>
+                <div class="footline">
+                    <div class="line"></div>
+                </div>
+            </div>
+            <!--包裹购物车-->
+            <div class="cart-wrap" style="display: block;">
+                <div class="w">
+                    <div id="jd-cart">
+                        <div class="cartmain">
+                            <div class="cart-thead">
+                                <div class="cart-col t-checkbox">
+                                    <div class="cart-checkbox">
+                                        <input type="checkbox" checked="" name="" id="" class="allsel" value="" /> 全选
+                                    </div>
+                                </div>
+                                <div class="cart-col t-goods">商品</div>
+                                <div class="cart-col t-props"></div>
+                                <div class="cart-col t-prices">单价(元)</div>
+                                <div class="cart-col t-quantity">数量</div>
+                                <div class="cart-col t-sum">小计(元)</div>
+                                <div class="cart-col t-action">操作</div>
+                            </div>
+                            <div id="cart-list">
+                                <div class="cart-item-list">
+                                    <div class="cart-tbody">
+                                        <div class="shop">
+                                            <div class="cart-checkbox">
+                                                <input type="checkbox" checked="" name="" id="" value="" />
+                                            </div>
+                                            <span class="shop-info">
+                                                <a href=""></a>
+                                            </span>
+                                            <div class="shop-ex">
+                                                购满￥99.00 已免运费
+                                                <span class="tips-icon"
+                                                    data-tips="部分超重超大商品运费单独收取，不在本功能范围内，准确运费以结算页为准"></span>
+                                            </div>
+                                        </div>
+                                        <div class="item-list">
+                                            <div class="item-head">
+                                                <div class="header-left">
+                                                    <a class="header-left-p1" href="">
+                                                        <span>
+                                                            换购
+                                                            <b></b>
+                                                        </span> 活动商品已购满999.00元，可加价换购商品10件>
+                                                    </a>
+                                                    <a class="header-left-p2" href="">换购商品</a>
+                                                    <a href="">去凑单 ></a>
+                                                </div>
+                                                <div class="header-price">
+                                                    <b></b>
+                                                </div>
+                                            </div>
+                                            <div class="goods-item goods-item-sele" style="display: none;">
+                                                <div class="goods-info">
+                                                    <div class="cell b-checkbox">
+                                                        <div class="cart-checkbox">
+                                                            <input type="checkbox" checked="" name="" id="" value="" />
+                                                            <span class="line-circle"></span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="cell b-goods">
+                                                        <div class="goods-name">
+                                                            <div class="goods-pic">
+                                                                <a href=""><img src="" alt="" /></a>
+                                                            </div>
+                                                            <div class="goods-msg">
+                                                                <div class="goods-d-info">
+                                                                    <a href="">Apple iMac 27英寸一体机（Core i5
+                                                                        处理器/8GB内存/1TB存储/2GB独显/Retina 5K屏 MK462CH/A）</a>
+                                                                </div>
+                                                                <div class="goods-ex">
+                                                                    <span class="promise"></span>
+                                                                    <span class="promise">
+                                                                        <i></i><a href="">购买京东服务</a>
+                                                                    </span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="cell b-props">
+                                                        <div class="prop-text">尺码：27英寸Retina 5K 显示屏</div>
+                                                    </div>
+                                                    <div class="cell b-price">
+                                                        <strong>13488.00</strong>
+                                                        <a class="sales-promotion" href="">
+                                                            促销优惠
+                                                            <b></b>
+                                                        </a>
+                                                        <div class="sales-promotion-dropdown">
+                                                        </div>
+                                                    </div>
+                                                    <div class="cell b-quantity">
+                                                        <div class="quantity-form">
+                                                            <a class="quantity-down" href="javascript:void(0)">-</a>
+                                                            <input type="text" value="1" / style="padding: 0">
+                                                            <a class="quantity-add" href="javascript:void(0)">+</a>
+                                                        </div>
+                                                        <div class="quantity-text">有货</div>
+                                                    </div>
+                                                    <div class="cell b-sum">
+                                                        <strong>13488.00</strong>
+                                                    </div>
+                                                    <div class="cell b-action">
+                                                        <a href="javascript:void(0)">删除</a><a
+                                                            href="javascript:void(0)">移到我的关注</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="cart-floatbar">
+                        <div class="select-all">
+                            <div class="cart-checkbox">
+                                <input type="checkbox" checked="" name="" id="" class="allsel" value="" /> 全选
+                            </div>
+                        </div>
+                        <div class="operation">
+                            <a href="javascript:void(0)">删除选中的商品</a><a href="javascript:void(0)">移到我的关注</a>
+                        </div>
+                        <div class="toolbar-right">
+                            <div class="btn-area">
+                                <a href=""></a>
+                            </div>
+                            <div class="price-sum">
+                                <span class="txt">总价（不含运费）：</span>
+                                <span class="totalprice">￥0.00</span>
+                                <span class="txt">已节省：</span>
+                                <span class="totalsave">-￥0.00</span>
+                            </div>
+                            <div class="amount-sum">
+                                已选择
+                                <em>0</em> 件商品
+                                <b></b>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="goods-list goods-selected">
+                <ul>
+
+                </ul>
+            </div>
+        </div>
     </div>
 
-    <!-- 最近浏览和猜你喜欢 -->
-    <div id="browse_like_div" class="nc-goods-borowse"></div>
-
     <link href="https://statics.cnrmall.com/public/toolkit/bxslider/jquery.bxslider.css" rel="stylesheet" />
-    <script src="https://statics.cnrmall.com/public/toolkit/bxslider/jquery.bxslider.js"></script>
-    <script>
-        $(function () {
-            //最近浏览和猜你喜欢
-            $('#browse_like_div').ncBrowseAndGuessLike();
-        });
-    </script>
+
     <div id="footer">
         <div class="wrapper">
             <p><a href="/">首页</a>
@@ -141,22 +302,10 @@
                 Reserved&nbsp;&nbsp;&nbsp;&nbsp;服务热线：4008-518-518</p>
             <!--Copyright © 2018 央广小品,All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp;京ICP备10038858号 京公网安备：11011502002190 服务热线：4008-518-518<br />-->
             <!--Powered by <span style="font-weight: 600;"><font style="color:orange;">Cnrmall.com</font><font style="color:blue;"></font></span><br />-->
-            <script
-                type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1260731735'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "w.cnzz.com/q_stat.php%3Fid%3D1260731735' type='text/javascript'%3E%3C/script%3E"));</script>
-
-            <script>
-                var _hmt = _hmt || [];
-                (function () {
-                    var hm = document.createElement("script");
-                    hm.src = "https://hm.baidu.com/hm.js?905123a113c36971dd79389429636f4c";
-                    var s = document.getElementsByTagName("script")[0];
-                    s.parentNode.insertBefore(hm, s);
-                })();
-            </script>
             <ul class="footer-img">
                 <li><a class="img01" href="javascript:;"></a></li>
                 <li>
-                    <script src="https://kxlogo.knet.cn/seallogo.dll?sn=e16110811011565130ecka000000&size=0"></script>
+
                 </li>
                 <li><a id='___szfw_logo___' href='https://credit.szfw.org/CX63030000051620161107.html'
                         target='_blank'><img src='http://icon.szfw.org/cert.png' border='0' /></a></li>
@@ -164,6 +313,9 @@
             </ul>
         </div>
     </div>
+    <script src="script/js/jquery.js"></script>
+    <script src="script/js/cookie.js"></script>
+    <script src="script/js/cart.js"></script>
 </body>
 
 </html>
