--- a/project-ygmall/src/index_mall.html
+++ b/project-ygmall/src/index_mall.html
@@ -145,6 +145,11 @@
             color: #fff;
             display: block;
         }
+		.top-menu-con{
+			border:1px solid #ccc;
+			padding :10px
+		}
+		
 	</style>
 
 </head>
@@ -161,8 +166,8 @@
 			</div>
 			<div class="right" id="quickMenu">
 				<dl class="top-menu login">
-					<dt class="top-menu-title normal"><a href="/login" class="login-link">您好，请登录</a> <a
-							href="/register">免费注册</a></dt>
+					<dt class="top-menu-title normal"><a href="http://localhost/project-ygmall/src/login.html" class="login-link">您好,请登录</a> 
+						<a href="http://localhost/project-ygmall/src/registor.html">免费注册</a></dt>
 				</dl>
 				<dl class="top-menu my-order">
 					<dt class="top-menu-title"><a target="_blank" href="/member/orders/list">我的订单</a><span
@@ -268,7 +273,7 @@
 			<!-- 头部购物车_Star -->
 			<div id="topMyCart" class="my-cart">
 				<div class="my-cart-tit"><i class="my-cart-ico"></i><i data-red-point style="display: none;"
-						class="my-cart-count"></i><a target="_blank" href="/cart/list" title="购物车">我的购物车</a></div>
+						class="my-cart-count"></i><a target="_blank" href="http://localhost/project-ygmall/src/cart.html" title="购物车">我的购物车</a></div>
 				<div class="my-cart-con">
 					<div class="spacer"></div>
 					<div class="sub-title">
@@ -1651,7 +1656,7 @@
 			<h2>今日最大牌</h2>
 			<div class="right-max">
 				<a href="https://www.cnrmall.com/store/search?storeId=93" target="_blank"><img style="width: 185px;"
-						src="https://pic.cnrmall.com/image/51/16/5116018c2d342b42cec44d6f0e0505ed.jpg"></a>
+						src="img/right.png"></a>
 				<h3>中国农垦官方旗舰店</h3>
 				<p>良品生活，源自农垦，农产品质量安全追溯</p>
 			</div>
@@ -1862,8 +1867,8 @@
 							<div class="bz-cover">
 								<a href="https://www.cnrmall.com/search?cat=109" target="_blank" class="bz-cover-lk"
 									title="">
-									<img class="bz-cover-img J-lazy"
-										src="https://pic.cnrmall.com/image/bd/5a/bd5a6cf84f4eba9ee29276cc978e99da.jpg"
+									<img class="bz-cover-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/bd/5a/bd5a6cf84f4eba9ee29276cc978e99da.jpg"
 										data-original="https://pic.cnrmall.com/image/bd/5a/bd5a6cf84f4eba9ee29276cc978e99da.jpg"
 										alt="" />
 								</a>
@@ -1876,8 +1881,8 @@
 									title="精选蜂蜜">
 									<p class="bz-bi-tit" style="color: #ffd300">精选蜂蜜</p>
 									<p class="bz-bi-promo">纯纯蜜香 其味浓浓</p>
-									<img class="bz-bi-img J-lazy"
-										src="https://pic.cnrmall.com/image/89/25/89252c0122369ab10ab204f61301f5b5.jpg"
+									<img class="bz-bi-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/89/25/89252c0122369ab10ab204f61301f5b5.jpg"
 										data-original="https://pic.cnrmall.com/image/89/25/89252c0122369ab10ab204f61301f5b5.jpg"
 										alt="" />
 								</a>
@@ -1885,8 +1890,8 @@
 									title="冲调粉茶">
 									<p class="bz-bi-tit" style="color: #ffd300">冲调粉茶</p>
 									<p class="bz-bi-promo">浓缩精华</p>
-									<img class="bz-bi-img J-lazy"
-										src="https://pic.cnrmall.com/image/cd/0e/cd0e2e92839cd2e0b5ac5651a73ffe4a.jpg"
+									<img class="bz-bi-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/cd/0e/cd0e2e92839cd2e0b5ac5651a73ffe4a.jpg"
 										data-original="https://pic.cnrmall.com/image/cd/0e/cd0e2e92839cd2e0b5ac5651a73ffe4a.jpg"
 										alt="" />
 								</a>
@@ -1894,8 +1899,8 @@
 									title="粮油副食">
 									<p class="bz-bi-tit" style="color: #ffd300">粮油副食</p>
 									<p class="bz-bi-promo">精品杂粮 营养丰富</p>
-									<img class="bz-bi-img J-lazy"
-										src="https://pic.cnrmall.com/image/d7/78/d77804c72ff4739ff29342bc4eef338d.jpg"
+									<img class="bz-bi-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/d7/78/d77804c72ff4739ff29342bc4eef338d.jpg"
 										data-original="https://pic.cnrmall.com/image/d7/78/d77804c72ff4739ff29342bc4eef338d.jpg"
 										alt="" />
 								</a>
@@ -1903,8 +1908,8 @@
 									title="即食罐头">
 									<p class="bz-bi-tit" style="color: #ffd300">即食罐头</p>
 									<p class="bz-bi-promo">美味即享</p>
-									<img class="bz-bi-img J-lazy"
-										src="https://pic.cnrmall.com/image/aa/40/aa4027cfc852b2e258afd67433fb1feb.jpg"
+									<img class="bz-bi-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/aa/40/aa4027cfc852b2e258afd67433fb1feb.jpg"
 										data-original="https://pic.cnrmall.com/image/aa/40/aa4027cfc852b2e258afd67433fb1feb.jpg"
 										alt="" />
 								</a>
@@ -1913,22 +1918,22 @@
 							<div class="bz-more">
 								<a href="https://www.cnrmall.com/search?cat=2" target="_blank" class="bz-more-item"
 									title="">
-									<img class="bz-more-img J-lazy"
-										src="https://pic.cnrmall.com/image/0a/9a/0a9aefbe9c4c48c7575c1e21fcb5e31f.jpg"
+									<img class="bz-more-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/0a/9a/0a9aefbe9c4c48c7575c1e21fcb5e31f.jpg"
 										data-original="https://pic.cnrmall.com/image/0a/9a/0a9aefbe9c4c48c7575c1e21fcb5e31f.jpg"
 										alt="" />
 								</a>
 								<a href="https://www.cnrmall.com/search?cat=4" target="_blank" class="bz-more-item"
 									title="">
-									<img class="bz-more-img J-lazy"
-										src="https://pic.cnrmall.com/image/0c/6a/0c6a25bc3e00d9e28db90273b47835fd.jpg"
+									<img class="bz-more-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/0c/6a/0c6a25bc3e00d9e28db90273b47835fd.jpg"
 										data-original="https://pic.cnrmall.com/image/0c/6a/0c6a25bc3e00d9e28db90273b47835fd.jpg"
 										alt="" />
 								</a>
 								<a href="https://www.cnrmall.com/search?cat=422" target="_blank" class="bz-more-item"
 									title="">
-									<img class="bz-more-img J-lazy"
-										src="https://pic.cnrmall.com/image/29/e9/29e9f019431455aa9c951a5137ec1f69.jpg"
+									<img class="bz-more-img J-lazy" src=""
+										_src="https://pic.cnrmall.com/image/29/e9/29e9f019431455aa9c951a5137ec1f69.jpg"
 										data-original="https://pic.cnrmall.com/image/29/e9/29e9f019431455aa9c951a5137ec1f69.jpg"
 										alt="" />
 								</a>
